[package]
name = "elastic4r"
version = "0.1.0"
authors = ["bjk95 <bradleykester@quantexa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = {version = "1.0.118", features = ["derive"]}

[dependencies.confy]
version = "0.4.0"
features = ["yaml_conf"]
default-features = false

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }